--- a/code/android/src/main/android/res/layout/category.xml
+++ b/code/android/src/main/android/res/layout/category.xml
@@ -24,7 +24,7 @@
                       android:padding="3dip"
                       android:textStyle="bold" style="@style/DefaultTextFont"
                       android:layout_height="wrap_content"
-                      android:text="@string/category_icon"></TextView>
+                      android:text="@string/category_icon"/>
             <ImageView android:id="@+id/imageview_newcategory_icon" android:layout_weight="1"
                        android:layout_width="0dip"
                        android:padding="3dip" android:layout_height="32dip"
@@ -32,7 +32,7 @@
 
             </ImageView>
         </TableRow>
-        <View android:background="#000000" android:layout_height="2px" android:layout_width="fill_parent"></View>
+        <View android:background="#000000" android:layout_height="2px" android:layout_width="fill_parent"/>
         <TableRow>
             <GridView android:layout_weight="1" android:layout_width="0dip"
                       android:id="@+id/gridview_icons"
